--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Secure Camera Capture
             <h1>Secure Camera Capture</h1>
             <hr>
             <p>Put some content here...</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <a href="{{ site.baseurl }}/about.html" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
 </header>
