--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@ title: Portfolio
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="{{ site.baseurl }}{{ post.url }}/img/portfolio/1.jpg" class="img-responsive" alt="">
+                    <img src="{{ site.baseurl }}/img/portfolio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -28,7 +28,7 @@ title: Portfolio
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="{{ site.baseurl }}{{ post.url }}/img/portfolio/2.jpg" class="img-responsive" alt="">
+                    <img src="{{ site.baseurl }}/img/portfolio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -43,7 +43,7 @@ title: Portfolio
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="{{ site.baseurl }}{{ post.url }}/img/portfolio/3.jpg" class="img-responsive" alt="">
+                    <img src="{{ site.baseurl }}/img/portfolio/3.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -58,7 +58,7 @@ title: Portfolio
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="{{ site.baseurl }}{{ post.url }}/img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <img src="{{ site.baseurl }}/img/portfolio/4.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -73,7 +73,7 @@ title: Portfolio
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="{{ site.baseurl }}{{ post.url }}/img/portfolio/5.jpg" class="img-responsive" alt="">
+                    <img src="{{ site.baseurl }}/img/portfolio/5.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -88,7 +88,7 @@ title: Portfolio
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="{{ site.baseurl }}{{ post.url }}/img/portfolio/6.jpg" class="img-responsive" alt="">
+                    <img src="{{ site.baseurl }}/img/portfolio/6.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
