Updated Content, Added New Project Page and Team Page

--- a/team.html
+++ b/team.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Services
+title: Team
 ---
 <section class="bg-dark">
   <div class="text-center">
-    <h1>Services</h1>
+    <h1>The Team</h1>
   </div>
 </section>
 
@@ -12,7 +12,7 @@ title: Services
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">At Your Service</h2>
+                <h2 class="section-heading">{Insert Cool Team Name Here}</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -22,28 +22,28 @@ title: Services
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>Sturdy Templates</h3>
+                    <h3>Member A</h3>
                     <p class="text-muted">Our templates are updated regularly so they don't break.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Ready to Ship</h3>
+                    <h3>Member B</h3>
                     <p class="text-muted">You can use this theme as is, or you can make changes!</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Up to Date</h3>
+                    <h3>Member C</h3>
                     <p class="text-muted">We update dependencies to keep things fresh.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Made with Love</h3>
+                    <h3>Member D</h3>
                     <p class="text-muted">You have to make your websites with love these days!</p>
                 </div>
             </div>
