--- a/project.html
+++ b/project.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Portfolio
+title: Project
 ---
 <section class="bg-dark">
   <div class="text-center">
-    <h1>Portfolio</h1>
+    <h1>Project</h1>
   </div>
 </section>
 
@@ -17,10 +17,10 @@ title: Portfolio
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Phase I
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Proposal
                             </div>
                         </div>
                     </div>
@@ -32,10 +32,10 @@ title: Portfolio
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Phase II
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Prototype
                             </div>
                         </div>
                     </div>
@@ -47,10 +47,10 @@ title: Portfolio
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Phase III
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Integration
                             </div>
                         </div>
                     </div>
@@ -62,10 +62,10 @@ title: Portfolio
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Phase IV
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Final Design
                             </div>
                         </div>
                     </div>
@@ -77,10 +77,10 @@ title: Portfolio
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Phase V
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Design Day
                             </div>
                         </div>
                     </div>
@@ -92,10 +92,10 @@ title: Portfolio
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Phase VI
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Final Report
                             </div>
                         </div>
                     </div>
