Added Content, Added Phase 1 Stuff

--- a/about.html
+++ b/about.html
@@ -12,10 +12,13 @@ title: About
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2 class="section-heading">All about the Project!</h2>
+        <h2 class="section-heading">The Project</h2>
         <hr class="light">
-        <p class="text-faded">Stuff about the project!</p>
-        <!-- <a href="#" class="btn btn-default btn-xl">Get Started!</a>-->
+        <p class="text-faded">“A system that snaps a picture and stores the picture in memory securely. A good system will enable a security protocol, hopefully with military-grade encryption, so that any system cannot possibly be compromised by a user or thief. The picture should also be able to be recalled at a later time.”</p>
+        <h2 class="section-heading">The Goal</h2>
+        <hr class="light">
+        <p class="text-faded">To create a secure camera system that is capable of taking pictures and securely storing them offsite to a secondary location for later retrieval</p>
+        <!-- <a href="#" class="btn btn-default btn-xl">Button</a>
       </div>
     </div>
   </div>
