--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Secure Camera Capture
         <div class="header-content-inner">
             <h1>Secure Camera Capture</h1>
             <hr>
-            <p>Put some content here...</p>
+            <p>To create a secure camera system that is capable of taking pictures and securely storing them off-site to a secondary location for later retrieval</p>
             <a href="{{ site.baseurl }}/about.html" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
