--- a/team.html
+++ b/team.html
@@ -12,7 +12,7 @@ title: Team
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">{Insert Cool Team Name Here}</h2>
+                <h2 class="section-heading">Oklahoma State University</h2><h2>Senior Design 2</h2><h2>Spring 2016</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -22,29 +22,29 @@ title: Team
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>Member A</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    <h3>Christian Coffield</h3>
+                    <p class="text-muted">...</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Member B</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    <h3>Matthew Dekoning</h3>
+                    <p class="text-muted">...</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Member C</h3>
-                    <p class="text-muted">We update dependencies to keep things fresh.</p>
+                    <h3>Nathan Lea</h3>
+                    <p class="text-muted">...</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Member D</h3>
-                    <p class="text-muted">You have to make your websites with love these days!</p>
+                    <h3>Kevin Seitz</h3>
+                    <p class="text-muted">...</p>
                 </div>
             </div>
         </div>
