--- a/project.html
+++ b/project.html
@@ -12,7 +12,7 @@ title: Project
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="{{ site.baseurl }}/project_phase1.html" class="portfolio-box">
                     <img src="{{ site.baseurl }}/img/portfolio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
