--- a/project.html
+++ b/project.html
@@ -27,7 +27,7 @@ title: Project
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="{{ site.baseurl }}/project_phase2.html" class="portfolio-box">
                     <img src="{{ site.baseurl }}/img/portfolio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
