Website Update for Prototype Presentation

--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@ title: Project
                                 Phase I
                             </div>
                             <div class="project-name">
-                                Proposal
+                                Design
                             </div>
                         </div>
                     </div>
@@ -35,7 +35,7 @@ title: Project
                                 Phase II
                             </div>
                             <div class="project-name">
-                                Prototype
+                                Prototyping
                             </div>
                         </div>
                     </div>
