--- a/project_phase1.html
+++ b/project_phase1.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Project -- Phase 1
+title: Phase 1 -- Design
 ---
 <section class="bg-dark">
   <div class="text-center">
-    <h1>Phase 1</h1>
+    <h1>Phase 1 -- Design</h1>
   </div>
 </section>
 
@@ -12,9 +12,9 @@ title: Project -- Phase 1
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2 class="section-heading">Phase 1 Documents</h2>
+        <h2 class="section-heading">Design Documents</h2>
         <hr class="light">
-        <p class="text-faded">To create a secure camera system that is capable of taking pictures and securely storing them offsite to a secondary location for later retrieval</p>
+        <p class="text-faded">Below are all of the documents submitted for the design phase of our project, where we obtained permission from our advisors to proceed with prototyping. From left to right, there is the slideshow presentation we gave, the comprehensive project proposal we drafted, the software and hardware requirements document, and the Gantt chart reflecting our team’s predicted progress through the entirety of development.</p>
         <a href="{{ site.baseurl }}/documents/ProposalPresentation.pdf" class="btn btn-default btn-xl">Proposal Presentation</a>
         <a href="{{ site.baseurl }}/documents/Proposal.pdf" class="btn btn-default btn-xl">Proposal</a>
         <a href="{{ site.baseurl }}/documents/Requirements.pdf" class="btn btn-default btn-xl">Requirements</a>
