--- a/project_phase2.html
+++ b/project_phase2.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Project -- Phase 2
+title: Phase 2 -- Prototyping
 ---
 <section class="bg-dark">
   <div class="text-center">
-    <h1>Phase 2</h1>
+    <h1>Phase 2 -- Prototyping</h1>
   </div>
 </section>
 
@@ -12,10 +12,20 @@ title: Project -- Phase 2
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2 class="section-heading">Server Setup</h2>
+        <h1 class="section-heading">Server Setup</h1>
         <hr class="light">
         <!-- <p class="text-faded">To create a secure camera system that is capable of taking pictures and securely storing them offsite to a secondary location for later retrieval</p> -->
+        <h3>Step Zero: Start Here!</h3>
+        <a href="#" class="btn btn-default btn-xl">Initial Configuration Instructions</a>
+        <h3>Step One: Camera Device</h3>
+        <a href="#" class="btn btn-default btn-xl">Camera Configuration Instructions</a>
+        <h3>Step Two: Secure Server</h3>
         <a href="{{ site.baseurl }}/project_phase2_server_setup.html" class="btn btn-default btn-xl">Secure Server Configuration Instructions</a>
+        <h3>Step Three: Windows Client</h3>
+        <a href="https://github.com/nathanlea/SecureCameraCaptureClient/releases" class="btn btn-default btn-xl">Windows Client</a>
+        <h3>Step Four: Bringing It Together</h3>
+        <a href="#" class="btn btn-default btn-xl">Final Configuration Instructions</a>
+        
         <!-- <a href="{{ site.baseurl }}/documents/Proposal.pdf" class="btn btn-default btn-xl">Proposal</a>
         <a href="{{ site.baseurl }}/documents/Requirements.pdf" class="btn btn-default btn-xl">Requirements</a>
         <a href="{{ site.baseurl }}/documents/GanttChart.pdf" class="btn btn-default btn-xl">Gantt Chart</a> -->
