--- a/team.html
+++ b/team.html
@@ -12,7 +12,8 @@ title: Team
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Oklahoma State University</h2><h2>Senior Design 2</h2><h2>Spring 2016</h2>
+                <h2 class="section-heading">Pictured below is our team of development engineers.</h2>
+                <p class="text-muted">All were enrolled in Capstone Design at Oklahoma State University in the Spring of 2016.</p>
                 <hr class="primary">
             </div>
         </div>
@@ -21,30 +22,34 @@ title: Team
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
+                    <img src="{{ site.baseurl }}/img/team/1_sm.jpg" alt="">
+                    <!-- <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i> -->
                     <h3>Christian Coffield</h3>
-                    <p class="text-muted">...</p>
+                    <p class="text-muted">Christian is responsible for the encryption of all captured photos, as well as transmission between the camera device and the server. He’s also responsible for most documentation of the project, taking the lead editing role and producing content for the website.In his spare time, Christian likes to write stories, play video games, and spend time at home with his fiancé and pets.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <img src="{{ site.baseurl }}/img/team/2_sm.jpg" alt="">
+                    <!-- <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>  -->
                     <h3>Matthew Dekoning</h3>
-                    <p class="text-muted">...</p>
+                    <p class="text-muted">Matthew is responsible for the server part of the project. This includes receiving and dynamically indexing photos from the camera device and properly authenticating and serving photos to the client. Matthew enjoys fitness, film, games, and spending time with his fiancé in his free time as well as his pet tortoise, Dino.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <img src="{{ site.baseurl }}/img/team/3_sm.jpg" alt="">
+                    <!-- <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>  -->
                     <h3>Nathan Lea</h3>
-                    <p class="text-muted">...</p>
+                    <p class="text-muted">Nathan is responsible for the client part of the project. This includes developing a windows application that is able to download and save the pictures from the server along with configure the camera. Nathan enjoys biking, quad racing, and robotics. In his free time he enjoys not having a fiancé and working on many side projects.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <img src="{{ site.baseurl }}/img/team/4_sm.jpg" alt="">
+                    <!-- <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i> -->
                     <h3>Kevin Seitz</h3>
-                    <p class="text-muted">...</p>
+                    <p class="text-muted">Kevin is responsible for the camera capture and packaging portions of the project.  This includes managing multiple scripts to take the picture at a specified resolution and time interval to send off to Christian for encryption and transmission.  In addition, he is in charge of packaging for the camera system.  In his spare time he enjoys swimming, video games, going to the movie theater, and spending time with his fiancé.</p>
                 </div>
             </div>
         </div>
