Several Color/Styling Changes

--- a/about.html
+++ b/about.html
@@ -8,18 +8,18 @@ title: About
   </div>
 </section>
 
-<section class="bg-primary" id="about">
+<section id="about">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <h2 class="section-heading">The Project</h2>
-        <hr class="light">
-        <p class="text-faded">Tasked by Oklahoma State University, the project definition was given to us as the following:</p>
-        <p class="text-faded">“A system that snaps a picture and stores the picture in memory securely. A good system will enable a security protocol, hopefully with military-grade encryption, so that any system cannot possibly be compromised by a user or thief. The picture should also be able to be recalled at a later time.”</p>
+        <hr class="dark">
+        <p class="text-muted">Tasked by Oklahoma State University, the project definition was given to us as the following:</p>
+        <p class="text-muted">“A system that snaps a picture and stores the picture in memory securely. A good system will enable a security protocol, hopefully with military-grade encryption, so that any system cannot possibly be compromised by a user or thief. The picture should also be able to be recalled at a later time.”</p>
         <h2 class="section-heading">The Goal</h2>
-        <!-- <p class="text-faded">We have narrowed that down to a specific goal statement:</p> -->
+        <!-- <p class="text-muted">We have narrowed that down to a specific goal statement:</p> -->
         <hr class="light">
-        <p class="text-faded">Our goal is to produce a secure camera system that can capture photographs, store them in an off-site server securely, and allow only the intended user to access and retrieve the files at their convenience</p>
+        <p class="text-muted">Our goal is to produce a secure camera system that can capture photographs, store them in an off-site server securely, and allow only the intended user to access and retrieve the files at their convenience</p>
         <!-- <a href="#" class="btn btn-default btn-xl">Button</a>
       </div>
     </div>
