--- a/project_phase2.html
+++ b/project_phase2.html
@@ -8,12 +8,12 @@ title: Phase 2 -- Prototyping
   </div>
 </section>
 
-<section class="bg-primary" id="phase1">
+<section id="phase2">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <h1 class="section-heading">Server Setup</h1>
-        <hr class="light">
+        <hr class="dark">
         <!-- <p class="text-faded">To create a secure camera system that is capable of taking pictures and securely storing them offsite to a secondary location for later retrieval</p> -->
         <h3>Step Zero: Start Here!</h3>
         <a href="#" class="btn btn-default btn-xl">Initial Configuration Instructions</a>
