--- a/project_phase1.html
+++ b/project_phase1.html
@@ -8,13 +8,13 @@ title: Phase 1 -- Design
   </div>
 </section>
 
-<section class="bg-primary" id="phase1">
+<section id="phase1">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <h2 class="section-heading">Design Documents</h2>
-        <hr class="light">
-        <p class="text-faded">Below are all of the documents submitted for the design phase of our project, where we obtained permission from our advisors to proceed with prototyping. From left to right, there is the slideshow presentation we gave, the comprehensive project proposal we drafted, the software and hardware requirements document, and the Gantt chart reflecting our team’s predicted progress through the entirety of development.</p>
+        <hr class="dark">
+        <p class="text-muted">Below are all of the documents submitted for the design phase of our project, where we obtained permission from our advisors to proceed with prototyping. From left to right, there is the slideshow presentation we gave, the comprehensive project proposal we drafted, the software and hardware requirements document, and the Gantt chart reflecting our team’s predicted progress through the entirety of development.</p>
         <a href="{{ site.baseurl }}/documents/ProposalPresentation.pdf" class="btn btn-default btn-xl">Proposal Presentation</a>
         <a href="{{ site.baseurl }}/documents/Proposal.pdf" class="btn btn-default btn-xl">Proposal</a>
         <a href="{{ site.baseurl }}/documents/Requirements.pdf" class="btn btn-default btn-xl">Requirements</a>
