Updated Color of Bar

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ title: About
         <p class="text-muted">“A system that snaps a picture and stores the picture in memory securely. A good system will enable a security protocol, hopefully with military-grade encryption, so that any system cannot possibly be compromised by a user or thief. The picture should also be able to be recalled at a later time.”</p>
         <h2 class="section-heading">The Goal</h2>
         <!-- <p class="text-muted">We have narrowed that down to a specific goal statement:</p> -->
-        <hr class="light">
+        <hr class="dark">
         <p class="text-muted">Our goal is to produce a secure camera system that can capture photographs, store them in an off-site server securely, and allow only the intended user to access and retrieve the files at their convenience</p>
         <!-- <a href="#" class="btn btn-default btn-xl">Button</a>
       </div>
