Updated Color on Server Setup Page

--- a/project_phase2_server_setup.html
+++ b/project_phase2_server_setup.html
@@ -8,10 +8,10 @@ title: Project -- Phase 2 -- Server Setup
   </div>
 </section>
 
-<section class="bg-primary" id="phase2">
+<section id="phase2">
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 col-lg-offset-2 text-left">
+      <div class="col-lg-8 col-lg-offset-2 text-left text-muted">
         <ol type="1">
             <li>Update and Configure the Raspberry Pi</li>
             <ol type = "A">
