Updated Images on Team and Project Page

--- a/team.html
+++ b/team.html
@@ -25,7 +25,7 @@ title: Team
                     <img src="{{ site.baseurl }}/img/team/1_sm.jpg" alt="">
                     <!-- <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i> -->
                     <h3>Christian Coffield</h3>
-                    <p class="text-muted">Christian is responsible for the encryption of all captured photos, as well as transmission between the camera device and the server. He’s also responsible for most documentation of the project, taking the lead editing role and producing content for the website.In his spare time, Christian likes to write stories, play video games, and spend time at home with his fiancé and pets.</p>
+                    <p class="text-muted">Christian is responsible for the encryption of all captured photos, as well as transmission between the camera device and the server. He’s also responsible for most documentation of the project, taking the lead editing role and producing content for the website. In his spare time, he likes to write stories, play video games, and spend time at home with his fiancé and pets.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
