--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@ title: Project
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="{{ site.baseurl }}/project_phase1.html" class="portfolio-box">
-                    <img src="{{ site.baseurl }}/img/portfolio/1.jpg" class="img-responsive" alt="">
+                    <img class="img-responsive-prj1" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -28,7 +28,8 @@ title: Project
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="{{ site.baseurl }}/project_phase2.html" class="portfolio-box">
-                    <img src="{{ site.baseurl }}/img/portfolio/2.jpg" class="img-responsive" alt="">
+                    <!-- <img src="{{ site.baseurl }}/img/portfolio/big/2.jpg" class="img-responsive-prj2" alt=""> -->
+                    <img class="img-responsive-prj2" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -43,7 +44,7 @@ title: Project
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="{{ site.baseurl }}/img/portfolio/3.jpg" class="img-responsive" alt="">
+                    <img class="img-responsive-prj3" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -58,7 +59,7 @@ title: Project
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="{{ site.baseurl }}/img/portfolio/6.jpg" class="img-responsive" alt="">
+                    <img class="img-responsive-prj6" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -73,7 +74,7 @@ title: Project
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="{{ site.baseurl }}/img/portfolio/5.jpg" class="img-responsive" alt="">
+                    <img class="img-responsive-prj5" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -88,7 +89,7 @@ title: Project
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="{{ site.baseurl }}/img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <img class="img-responsive-prj4" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
