Update to website for integration changes

--- a/project_phase2.html
+++ b/project_phase2.html
@@ -12,19 +12,18 @@ title: Phase 2 -- Prototyping
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h1 class="section-heading">Server Setup</h1>
+        <h1 class="section-heading">Device Setup</h1>
         <hr class="dark">
         <!-- <p class="text-faded">To create a secure camera system that is capable of taking pictures and securely storing them offsite to a secondary location for later retrieval</p> -->
-        <h3>Step Zero: Start Here!</h3>
-        <a href="#" class="btn btn-default btn-xl">Initial Configuration Instructions</a>
-        <h3>Step One: Camera Device</h3>
-        <a href="#" class="btn btn-default btn-xl">Camera Configuration Instructions</a>
-        <h3>Step Two: Secure Server</h3>
+        <a href="#" class="btn btn-default btn-xl">Initial Requirements</a>
+        <h3>Segment One: Camera Device</h3>
+        <a href="{{ site.baseurl }}/project_phase2_camera_setup.html" class="btn btn-default btn-xl">Camera Configuration Instructions</a>
+        <h3>Segment Two: Secure Server</h3>
         <a href="{{ site.baseurl }}/project_phase2_server_setup.html" class="btn btn-default btn-xl">Secure Server Configuration Instructions</a>
-        <h3>Step Three: Windows Client</h3>
+        <h3>Segment Three: Windows Client</h3>
         <a href="https://github.com/nathanlea/SecureCameraCaptureClient/releases" class="btn btn-default btn-xl">Windows Client</a>
-        <h3>Step Four: Bringing It Together</h3>
-        <a href="#" class="btn btn-default btn-xl">Final Configuration Instructions</a>
+        <h3>Segment Four: Presentation</h3>
+        <a href="{{ site.baseurl }}/documents/PrototypingPresentation.pdf" class="btn btn-default btn-xl">Prototyping Presentation</a>
         
         <!-- <a href="{{ site.baseurl }}/documents/Proposal.pdf" class="btn btn-default btn-xl">Proposal</a>
         <a href="{{ site.baseurl }}/documents/Requirements.pdf" class="btn btn-default btn-xl">Requirements</a>
