--- a/project_phase2.html
+++ b/project_phase2.html
@@ -22,7 +22,7 @@ title: Phase 2 -- Prototyping
         <a href="{{ site.baseurl }}/project_phase2_server_setup.html" class="btn btn-default btn-xl">Secure Server Configuration Instructions</a>
         <h3>Segment Three: Windows Client</h3>
         <a href="https://github.com/nathanlea/SecureCameraCaptureClient/releases" class="btn btn-default btn-xl">Windows Client</a>
-        <h3>Segment Four: Presentation</h3>
+        <h3>Presentation</h3>
         <a href="{{ site.baseurl }}/documents/PrototypingPresentation.pdf" class="btn btn-default btn-xl">Prototyping Presentation</a>
         
         <!-- <a href="{{ site.baseurl }}/documents/Proposal.pdf" class="btn btn-default btn-xl">Proposal</a>
