Added Phase 3 placeholders

--- a/project.html
+++ b/project.html
@@ -43,7 +43,7 @@ title: Project
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="{{ site.baseurl }}/project_phase3.html" class="portfolio-box">
                     <img class="img-responsive-prj3" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
