Added Picture integration/3dcase.png

--- a/project_phase3.html
+++ b/project_phase3.html
@@ -16,7 +16,7 @@ title: Phase 3 -- Integration
 		<p class="text-muted">TEXT GOES HERE</p>
         <hr class="dark">
 		<p class="text-muted">Camera Pi w/o case</p>
-		<p class="text-muted">3/D Model of case</p>
+		<img src="{{ site.baseurl }}/img/integration/3dcase.png" alt="3/D Model of case">
 		<p class="text-muted">Camera Pi in case and plugged in</p>
 		<p class="text-muted">Server Pi Wired to monitor</p>
 		<p class="text-muted">Server Pi, presentable version</p>
